final changeg before hackathon
Change-Id: Idb951c18d97b72902533ed18c63afe37f51c3bfc
Signed-off-by: Sandeep Mekala <sandeep.mekala@sap.com>

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -348,7 +348,7 @@
 					<!--  notification start -->
 					<a href="#notificationList" style="position:relative;" class="header-notif-icon">
 						<i class="fa fa-bell"></i>
-						<span class="badge bg-theme" style="margin-top: -13px;cursor:pointer;">2</span>
+						<span class="badge bg-theme" id="notifCountHeader" style="margin-top: -13px;cursor:pointer;">0</span>
 					</a>
 					<!-- <ul id="header_notification_bar"> -->
 						<!-- <li class="dropdown"> -->
@@ -481,16 +481,16 @@
 						<h5 class="centered" style="color: #2e6ca4;">DASHBOARD</h5></br>
 					</div>
 					<div class="main-tab">
+						<p class="centered"><a href="#datadrill"><img src="images/data_drill.png" class="" width="60"></a></p>
+						<h5 class="centered">DATA DRILL</h5></br>
+					</div>
+					<div class="main-tab">
 						<p class="centered"><a href="#users"><img src="images/menu_icon_users.png" class="" width="60"></a></p>
 						<h5 class="centered">USERS</h5></br>
 					</div>
 					<div class="main-tab">
 						<p class="centered"><a href="#settings"><img src="images/menu_icon_settings.png" class="" width="60"></a></p>
 						<h5 class="centered">SETTINGS</h5></br>
-					</div>
-					<div class="main-tab">
-						<p class="centered"><a href="#support"><img src="images/menu_icon_support.png" class="" width="60"></a></p>
-						<h5 class="centered">SUPPORT</h5></ul>
 					</div>
               <!-- sidebar menu end-->
           </div>
@@ -569,7 +569,7 @@
 											padding: 5px;
 											display: inline-block;
 											line-height: 1;
-											">_%</span>
+											">21 %</span>
 										<span style="
 											font-size: 18px;
 											/* text-align: center; */
@@ -639,7 +639,7 @@
 											padding: 5px;
 											display: inline-block;
 											line-height: 1;
-											">_%</span>
+											">54 %</span>
 										<span style="
 											font-size: 18px;
 											/* text-align: center; */
@@ -707,7 +707,7 @@
 											padding: 5px;
 											display: inline-block;
 											line-height: 1;
-											">_%</span>
+											">64 %</span>
 										<span style="
 											font-size: 18px;
 											/* text-align: center; */
@@ -776,7 +776,7 @@
 											padding: 5px;
 											display: inline-block;
 											line-height: 1;
-											">_%</span>
+											">47 %</span>
 										<span style="
 											font-size: 18px;
 											/* text-align: center; */
@@ -843,7 +843,7 @@
 							<div class="panel-body">
 								<p class="" style="
 											font-size: 18px;
-										">You have <span id="notifCount" style="font-weight: 800;color: aliceblue;">2</span> new incident(s)</p>
+										">You have <span id="notifCount" style="font-weight: 800;color: aliceblue;">0</span> new incident(s)</p>
 								<ul id="notificationList" class="extended inbox notification-list" style="
 									overflow-y: auto;
 									max-height: 275px;
